# PhdMPI

./: .gitignore  InitializeMPI.ipynb  LICENSE  README.ipynb  README.md  TestCpp.ipynb
0_ParallelProgramming/: 0_ParallelProgramming.ipynb
1_MPI_Basic/: 1_MPI_Basic.ipynb  CMakeLists.txt  main_comm_split.cpp  main_communicators.cpp  main_example.cpp  main_example.py  main_init.cpp  main_init.py
2_MPI_Communications/: 2_MPI_Communications.ipynb  CMakeLists.txt  main_deadlock.cpp  main_isend_irecv.cpp  main_persistent.cpp  main_send_recv.cpp  main_sendrecv.cpp  main_struct.cpp
3_Collectives/: 3_Collectives.ipynb  CMakeLists.txt  main_bcast.cpp  main_gather_scatter.cpp  main_reduce.cpp
4_MPI_Advanced/: 4_MPI_Advanced.ipynb  CMakeLists.txt  main_cart.cpp  main_partitioned.cpp  main_rma.cpp  main_spawn.cpp  main_thread.cpp  main_time.cpp  main_vector.cpp
Docker/: Dockerfile  makefile
FirstExample/: CMakeLists.txt  main.cpp
